--- a/app/views/products/types/text_creation/stories/_form.html.erb
+++ b/app/views/products/types/text_creation/stories/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@story, html: {class: 'form-vertical'}) do |f| %>
+<%= simple_form_for(@story, as: :story, url: @story.new_record? ? stories_path : story_path(@story), html: {class: 'form-vertical'}) do |f| %>
   <%= render partial: 'shared/form/error_messages', locals: { resource: @story } %>
   
   <div class="form-inputs">
