--- a/app/views/products/types/text_creation/stories/_form.html.erb
+++ b/app/views/products/types/text_creation/stories/_form.html.erb
@@ -1,19 +1,17 @@
 <%= simple_form_for(@story, as: :story, url: @story.new_record? ? stories_path : story_path(@story), html: {class: 'form-vertical'}) do |f| %>
   <%= render partial: 'shared/form/error_messages', locals: { resource: @story } %>
   
-  <div class="form-inputs">
-    <%= @story.project ? f.hidden_field(:project_id) : f.input(:project_id, collection: Project.all) %> 
-    <%= f.input :name %>  
-    <%= f.input :language, collection: all_language_options %>  
-    <%= f.input :min_length %>  
-    <%= f.input :max_length %>  
-    <%#= render 'products/mixins/keywords', f: f %>
-    <%#= f.check_box :with_quality_assurance %>
-    <%#= f.label :with_quality_assurance, t('activerecord.attributes.story.with_quality_assurance') %>
-    <%= f.input :text, as: :text, input_html: {style: 'width:500px; height:100px;'} %>
-  </div>
+  <%= @story.project ? f.hidden_field(:project_id) : f.input(:project_id, collection: Project.all) %> 
+  <%= f.input :name %>  
+  <%= f.input :language, collection: all_language_options %>  
+  <%= f.input :min_length %>  
+  <%= f.input :max_length %>  
+  <%#= render 'products/mixins/keywords', f: f %>
+  <%#= f.check_box :with_quality_assurance %>
+  <%#= f.label :with_quality_assurance, t('activerecord.attributes.story.with_quality_assurance') %>
+  <%= f.input :text, as: :text, input_html: {style: 'width:500px; height:100px;'} %>
   
-  <div class="form-actions">
+  <div class="form-group">
     <%= f.button :submit %>
   </div>
 <% end %>
